[project]
name = "pyutilities_rikka"
version = "0.79"
authors = [
  { name="Rikka", email="rikkadoesthings@gmail.com" },
]
description = "A bunch of utilities for Python."
requires-python = ">=2.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/RikkaDoesLessThings/PyUtilities"
Issues = "https://github.com/RikkaDoesLessThings/PyUtilities/issues"
